fixed z-index of header

--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -7,6 +7,7 @@
     align-items: center;
     color: var(--white-color);
     position:fixed;
+    z-index: 5;
 
     & &__logo{
         width: 60px;
@@ -24,6 +25,7 @@
         position: absolute;
         top: 76px;
         right: 0;
+        
         width: 300px;
         height: calc(100vh - 76px);
         text-align: right;        
